--- a/publications/UchoaPapers.bib
+++ b/publications/UchoaPapers.bib
@@ -1,13 +1,25 @@
 
+
+@inproceedings{deMelloAAA19,
+  title="{Investigating the Social Representations of the Identification of Code Smells by Practitioners and Students from Brazil}",
+  author={Rafael de Mello and Anderson Uchôa and Roberto Oliveira and Daniel Oliveira and Willian Oizumi and Jairo Souza and Baldoino Santos Neto and Alessandro Garcia},
+  booktitle={Proceedings of the 33nd Brazilian Symposium on Software Engineering (SBES)},
+  pages={1--10},
+  note = {<font color="red">Accepted for Publication (to appear)</font>},
+  year={2019},
+abstract={Context: The identification of code smells is one of the most subjective tasks in software engineering. A key reason is the influence of collective aspects of communities working on this task, such as their beliefs regarding the relevance of certain smells. However, collective aspects are often neglected in the context of smell identification. For this purpose, we can use the social representations theory. Social representations comprise the set of values, behaviors, and practices of communities associated with a social object, such as the task of identifying smells. Aim: To characterize the social representations behind smell identification. Method: We conducted an empirical study on the social representations of smell identification by two communities. One community is composed of postgraduate students from different Brazilian universities. The other community is composed of practitioners located in Brazilian companies, having different levels of experience in code reviews. We analyzed the associations made by the study participants about smell identification, i.e., what immediately comes to their minds when they think about this task. Results: One of the key findings is that the community of students and practitioners have stronger associations in different types of code smells. Students share a strong belief that smell identification is a matter of measurement, while practitioners focus on the structure of the source code and its semantics. Besides, we found that only practitioners frequently associate the task with individual skills. This finding suggests research directions on code smells may be revisited. Conclusion: We found evidence that social representations theory allows identifying research gaps and opportunities by looking beyond the borders of formal knowledge and individual opinions. Therefore, this theory can be considered an important resource for conducting qualitative studies in software engineering.},
+publisher={ACM}
+}
+
+
+
 @inproceedings{FernandesAAA19,
   title="{On the Alternatives for Composing Batch Refactoring}",
   author={Eduardo Fernandes and Anderson Uchôa and Ana Carla Bibiano and Alessandro Garcia},
   booktitle={Proceedings of the 3rd International Workshop on Refactoring (IWoR)},
-  pages={1--4},
-note = {<font color="red">Accepted for Publication (to appear)</font>},
+  pages={9--12},
   year={2019},
 abstract={Code refactoring is often performed for improving code structures through code transformations. Many transformations, e.g., extracting or moving a method, are applied for at least partially removing code smells. Each code smell is a symptom of a poor code structure that makes hard to read and change the program. Developers often compose two or more interrelated transformations in conjunction (batch refactoring) rather than applying a single transformation. For instance, developers often compose method extractions with method motions to better organize the features realized by classes. We have recently observed cases of batch refactoring performed along with code review in open source projects. We then noticed that composing batches capable of fully removing code smells is quite challenging. Especially, it requires carefully discussing on how two or more transformations complement one another and what to expect from the batch effect on code smell. This position aims to reason about multiple alternatives to support developers on composing their batches. These alternatives should make it easier to compose batches that remove code smells. For this purpose, we exemplify the role of semi-automated tools in gradually recommending transformations, thereby guiding the batch composition in each alternative.},
-url = {https://anderson-uchoa.github.io/publications/FernandesAAA19.pdf},
 publisher={IEEE Press}
 }
 
@@ -17,8 +29,7 @@ publisher={IEEE Press}
   title="{Investigating the Social Representations of Code Smell Identification: A Preliminary Study}",
   author={Rafael de Mello and Anderson Uchôa and Roberto Oliveira and Daniel Tenorio and Baldoino Fonseca and Alessandro Garcia and Fernanda de Mello},
   booktitle={Proceedings of the 12th International Workshop on Cooperative and Human Aspects of Software Engineering (CHASE)},
-  pages={1--8},
-note = {<font color="red">Accepted for Publication (to appear)</font>},
+  pages={53--60},
   year={2019},
 abstract={Context: The identification of code smells is one of the most subjective tasks in software engineering. A key reason is the influence of collective aspects of communities working on this task, such as their beliefs regarding the relevance of certain smells. However, collective aspects are often neglected in the context of smell identification. For this purpose, we can use the social representations theory. Social representations comprise the set of values, behaviors and practices of communities associated with a social object, such as the task of identifying smells. Aim: To characterize the social representations behind smell identification. Method: We conducted a preliminary study on the social representations of smell identification by two communities. One community is composed of postgraduate students involved in various investigations related to code smells. The other community is composed of practitioners from industry, with experience in code reviews. We analyzed the associations made by the study participants about smell identification, i.e., what immediately comes to their minds when they think about this task. Results: One of the key findings is that only the community of practitioners strongly associates this task with semantic smells. This finding suggests research directions on code smells may be revisited, as they focus mostly on measurable or structural smells. Considering the novelty of using the social representations theory in software engineering, we also compiled a set of lessons learned. For instance, we observed some key challenges we faced in using the theory. These challenges include: (i) the predominance of associations with technical rather than non-technical concepts, and (ii) the fuzzy definitions of key concepts in our field. Conclusion: We found initial evidence that social representations analysis is a useful instrument to reveal discrepancies and commonalities on how different communities deal with a subjective task. Thus, we expect the experience reported in this paper may encourage and contribute to future studies of social representations in the field.},
 url = {https://anderson-uchoa.github.io/publications/deMelloARDBAF19.pdf},
@@ -31,7 +42,6 @@ publisher={IEEE Press}
   author={Anderson Uchôa and Eduardo Fernandes and Baldoino Fonseca and Rafael de Mello and Caio Barbosa and Gabriel Nunes and Alessandro Garcia and Leopoldo Teixeira},
   booktitle={Proceedings of the 1st International Workshop on Software Engineering for Healthcare (SEH)},
   pages={1--8},
-note = {<font color="red">Accepted for Publication (to appear)</font>},
   year={2019},
 abstract={Software gamification aims at engaging users with software system features. User engagement is promoted via a gamification model that associates game elements (e.g., points) and rules (e.g., ranking policy) with each feature. Gamification has been increasingly explored in certain healthcare domains, such as chronic disease management and physical activity. However, there are currently two important literature gaps. First, certain healthcare domains in which user engagement is even more critical, such as the prevention of mosquito-transmitted diseases, have not systematically explored gamification yet. Healthcare systems of this domain largely depend on the wide engagement of the population, health professionals and authorities. Second, gamification is often introduced in existing systems developed without gamification in mind. Current methods are quite limited to support this task. In this paper, we report our experience while defining, incorporating, and evaluating a gamification model of an existing healthcare system called VazaZika. VazaZika is intended to assist the prevention of mosquito-transmitted diseases in economically emerging countries. We present and discuss the application of a method, adapted from a previous study, to support the design and incorporation of a gamification model in existing systems (VazaZika, in our case). We also present the resulting conceptual model based on 12 game elements and 16 rules. We evaluate this model with 20 users in terms of ease of use and potential for user engagement. Our results suggest that our conceptual model has resulted in an easy-to-use system with the potential of truly engaging users with critical healthcare-related features. We expect the method and its resulting model can be further reused and adapted to similar healthcare systems.},
 url = {https://anderson-uchoa.github.io/publications/UchoaEBRCGAL19.pdf},
@@ -56,7 +66,7 @@ publisher={ACM}
   title={VazaZika: A Software Platform for Surveillance and Control of Mosquito-Borne Diseases},
   author={Eduardo Fernandes and Anderson Uchôa and Leonardo Sousa and Anderson Oliveira and Rafael de Mello and Luiz Paulo Barroca and Diogo Carvalho and Alessandro Garcia and Baldoino Fonseca and Leopoldo Teixeira},
   booktitle={16th International Conference on Information Technology: New Generations (ITNG)},
-  pages={1--4},
+  pages={617--620},
   year={2019},
 note = {<font color="red">Accepted for Publication (to appear)</font>},
 abstract={Mosquito-borne diseases negatively affect economically emerging countries. Nevertheless, the current public healthcare solutions are insufficient to support disease surveillance and control. The citizen engagement in reporting mosquito breeding sites is hard to achieve but essential in preventing disease outbreaks. This paper introduces the VazaZika platform aimed to support the surveillance and control of mosquito-borne diseases. This platform evolves the VazaDengue legacy platform with gamification. Through game elements and rules, we aim to make enjoyable and challenging to report mosquito breeding sites via VazaZika. Citizens are continuously rewarded as they perform tasks in the platform. They progress in levels that enable new tasks and jump in rankings according to the citizens' location. Citizens can also join teams for engaging with challenges, which helps to develop a sense of belonging and connection against the spread of diseases. This paper reports the process of gamifying VazaDengue, the platform user interface and its conceptual model, aimed to support reuse.},
