--- a/publications/UchoaPapers.bib
+++ b/publications/UchoaPapers.bib
@@ -1,7 +1,7 @@
 
 
 @inproceedings{deMelloAAA19,
-  title="{Investigating the Social Representations of the Identification of Code Smells by Practitioners and Students from Brazil}",
+  title={Investigating the Social Representations of the Identification of Code Smells by Practitioners and Students from Brazil},
   author={Rafael de Mello and Anderson Uchôa and Roberto Oliveira and Daniel Oliveira and Willian Oizumi and Jairo Souza and Baldoino Santos Neto and Alessandro Garcia},
   booktitle={Proceedings of the 33nd Brazilian Symposium on Software Engineering (SBES)},
   pages={1--10},
@@ -14,7 +14,7 @@ publisher={ACM}
 
 
 @inproceedings{FernandesAAA19,
-  title="{On the Alternatives for Composing Batch Refactoring}",
+  title={On the Alternatives for Composing Batch Refactoring},
   author={Eduardo Fernandes and Anderson Uchôa and Ana Carla Bibiano and Alessandro Garcia},
   booktitle={Proceedings of the 3rd International Workshop on Refactoring (IWoR)},
   pages={9--12},
@@ -27,7 +27,7 @@ publisher={IEEE Press}
 
 
 @inproceedings{deMelloARDBAF19,
-  title="{Investigating the Social Representations of Code Smell Identification: A Preliminary Study}",
+  title={Investigating the Social Representations of Code Smell Identification: A Preliminary Study},
   author={Rafael de Mello and Anderson Uchôa and Roberto Oliveira and Daniel Tenorio and Baldoino Fonseca and Alessandro Garcia and Fernanda de Mello},
   booktitle={Proceedings of the 12th International Workshop on Cooperative and Human Aspects of Software Engineering (CHASE)},
   pages={53--60},
