--- a/publications/UchoaPapers.bib
+++ b/publications/UchoaPapers.bib
@@ -69,11 +69,12 @@ publisher={ACM}
   booktitle={16th International Conference on Information Technology: New Generations (ITNG)},
   pages={617--620},
   year={2019},
-note = {<font color="red">Accepted for Publication (to appear)</font>},
 abstract={Mosquito-borne diseases negatively affect economically emerging countries. Nevertheless, the current public healthcare solutions are insufficient to support disease surveillance and control. The citizen engagement in reporting mosquito breeding sites is hard to achieve but essential in preventing disease outbreaks. This paper introduces the VazaZika platform aimed to support the surveillance and control of mosquito-borne diseases. This platform evolves the VazaDengue legacy platform with gamification. Through game elements and rules, we aim to make enjoyable and challenging to report mosquito breeding sites via VazaZika. Citizens are continuously rewarded as they perform tasks in the platform. They progress in levels that enable new tasks and jump in rankings according to the citizens' location. Citizens can also join teams for engaging with challenges, which helps to develop a sense of belonging and connection against the spread of diseases. This paper reports the process of gamifying VazaDengue, the platform user interface and its conceptual model, aimed to support reuse.},
 url = {https://anderson-uchoa.github.io/publications/FernandesALARLDABL19.pdf},
-  publisher={Springer}
+doi = {10.1007/978-3-030-14070-0_89},
+publisher={Springer}
 }
+
 
 @inproceedings{FerreiraIEDAAAJFGCBR18,
  author = {Ferreira, Isabella and Fernandes, Eduardo and Cedrim, Diego and Uchôa, Anderson and Bibiano, Ana Carla and Garcia, Alessandro and Correia, João Lucas and Santos, Filipe and Nunes, Gabriel and Barbosa, Caio and Fonseca, Baldoino and de Mello, Rafael},
