--- a/publications/UchoaPapers.bib
+++ b/publications/UchoaPapers.bib
@@ -1,6 +1,6 @@
 @inproceedings{deMelloARWJKDBA19,
   title={Do Research and Practice of Code Smell Identification Walk Together?},
-  author={Rafael de Mello, Anderson Uchôa, Roberto Oliveira, Willian Oizumi, Jairo Souza, Kleyson Mendes, Daniel Oliveira, Baldoino Fonseca and Alessandro Garcia},
+  author={Rafael de Mello and Anderson Uchôa and Roberto Oliveira and Willian Oizumi and Jairo Souza and Kleyson Mendes and Daniel Oliveira and Baldoino Fonseca and Alessandro Garcia},
   booktitle={Proceedings of the 13th International Symposium on Empirical Software Engineering and Measurement (ESEM)},
   pages={1--6},
   note = {<font color="red">Accepted for Publication (to appear)</font>},
