--- a/publications/UchoaPapers.bib
+++ b/publications/UchoaPapers.bib
@@ -1,12 +1,13 @@
 @inproceedings{deMelloARWJKDBA19,
-  title={Do Research and Practice of Code Smell Identification Walk Together?},
+  title={Do Research and Practice of Code Smell Identification Walk Together? A Social Representations Analysis},
   author={Rafael de Mello and Anderson Uchôa and Roberto Oliveira and Willian Oizumi and Jairo Souza and Kleyson Mendes and Daniel Oliveira and Baldoino Fonseca and Alessandro Garcia},
   booktitle={Proceedings of the 13th International Symposium on Empirical Software Engineering and Measurement (ESEM)},
   pages={1--6},
   note = {<font color="red">Accepted for Publication (to appear)</font>},
   year={2019},
-abstract={Context: It is frequently claimed the need for bridging the gap between software engineering research and practice. In this sense, the theory of social representations may be useful to characterize the actual concerns of software developers. It comprises the system of values, behaviors, and practices of communities regarding a particular social object, such as the task of smell identification. Aim: To characterize the social representations of smell identification by software developers. Method: Based on the answers given to a questionnaire, we analyzed the associations made by the developers about smell identification, i.e., what immediately comes to their minds when they think about this task. Results: We found that developers strongly associate smell identification with the practice of smell removal and with the incidence of bugs. They also frequently associate the task with the practice of inspection and with the need of having individual skills. Besides, we verified that the current state of the art on smell identification partially address the social representations of the software developers. Conclusion: There is a considerable gap between the research of smell identification and its practice. We propose some directions to mitigating this gap.},
-publisher={IEEE Press}
+abstract={Context: It is frequently claimed the need for bridging the gap between software engineering research and practice. In this sense, the theory of social representations may be useful to characterize the actual concerns of software developers. It comprises the system of values, behaviors, and practices of communities regarding a particular social object, such as the task of smell identification. Aim: To characterize the social representations of smell identification by software developers. Method: Based on the answers given to a questionnaire, we analyzed the associations made by the developers about smell identification, i.e., what immediately comes to their minds when they think about this task. Results: We found that developers strongly associate smell identification with the practice of smell removal and with the incidence of bugs. They also frequently associate the task with the practice of inspection and with the need of having individual skills. Besides, we verified that the current state of the art on smell identification partially address the social representations of the software developers. Conclusion: There is a considerable gap between the research of smell identification and its practice. We propose directions to mitigating this gap.},
+publisher={IEEE Press},
+url = {https://anderson-uchoa.github.io/publications/deMelloARWJKDBA19.pdf}
 }
 
 
