--- a/publications/UchoaPapers.bib
+++ b/publications/UchoaPapers.bib
@@ -2,7 +2,7 @@
 @inproceedings{SousaAECJMRA19,
   title={REM4DSPL: A Requirements Engineering Method for Dynamic Software Product Lines},
   author={Amanda Sousa and Anderson Uchôa and Eduardo Fernandes and Carla I. M. Bezerra and José Maria Monteiro and Rossana M. C. Andrade},
-  booktitle={Proceedings of the 18th Brazilian Symposium on Software Quality (SBQS},
+  booktitle={Proceedings of the 18th Brazilian Symposium on Software Quality (SBQS)},
   pages={1--10},
   note = {<font color="red">Accepted for Publication (to appear)</font>},
   year={2019},
