--- a/publications/UchoaPapers.bib
+++ b/publications/UchoaPapers.bib
@@ -1,16 +1,13 @@
-
 @inproceedings{SousaAECJMRA19,
   title={REM4DSPL: A Requirements Engineering Method for Dynamic Software Product Lines},
-  author={Amanda Sousa and Anderson Uchôa and Eduardo Fernandes and Carla I. M. Bezerra and José Maria Monteiro and Rossana M. C. Andrade},
-  booktitle={Proceedings of the 18th Brazilian Symposium on Software Quality (SBQS)},
-  pages={1--10},
-  note = {<font color="red">Accepted for Publication (to appear)</font>},
+  author={Sousa, Amanda and Uch{\^o}a, Anderson and Fernandes, Eduardo and Bezerra, Carla IM and Monteiro, Jos{\'e} Maria and Andrade, Rossana},
+  booktitle={Proceedings of the XVIII Brazilian Symposium on Software Quality (SBQS)},
+  pages={129--138},
   year={2019},
-abstract={Context: Dynamic Software Product Line (DSPL) is a set of software products capable of self-adapt and configure in run-time. DSPL products have common features (commonalities) and varying features (managed in run-time according to context changes). Objective: DSPL requirements engineering is challenging. Requirements engineers have to carefully plan self-adaptation while eliciting, modeling, and managing variability requirements. This paper introduces a method for DSPL requirements engineering. Method: We relied on empirically-derived activities of DSPL requirements engineering to build our method. We selected techniques and templates used in other domains such as SPL for refinement and incorporation into the method. We asked DSPL experts on the method applicability. Result: We introduced the Requirements Engineering Method for DSPL (REM4DSPL). Elicitation is guided by supervised discussions. Modeling relies on feature models. Variability Management is tool-assisted and validated via feature model inspection. DSPL experts agreed on the method applicability and suggested improvements. Conclusion: REM4DSPL relies on empirically-derived activities, techniques that have been successfully used by previous work, and templates adapted to the DSPL context. We expect our method to guide requirements engineers in practice.},
-publisher={ACM},
+abstract={Context: Dynamic Software Product Line (DSPL) is a set of software products capable of self-adapt and configure in run-time. DSPL products have common features (commonalities) and varying features (managed in run-time according to context changes). Objective: DSPL requirements engineering is challenging. Requirements engineers have to carefully plan self-adaptation while eliciting, modeling, and managing variability requirements. This paper introduces a method for DSPL requirements engineering. Method: We relied on empirically-derived activities of DSPL requirements engineering to build our method. We selected techniques and templates used in other domains such as SPL for refinement and incorporation into the method. We asked DSPL experts on the method applicability. Result: We introduced the Requirements Engineering Method for DSPL (REM4DSPL). Elicitation is guided by supervised discussions. Modeling relies on feature models. Variability Management is tool-assisted and validated via feature model inspection. DSPL experts agreed on the method applicability and suggested improvements. Conclusion: REM4DSPL relies on empirically-derived activities, techniques that have been successfully used by previous work, and templates adapted to the DSPL context. We expect our method to guide requirements engineers in practice.},	
+  organization={ACM},
 url = {https://anderson-uchoa.github.io/publications/SousaAECJMRA19.pdf}
 }
-
 
 
 @inproceedings{deMelloARWJKDBA19,
