--- a/publications/UchoaPapers.bib
+++ b/publications/UchoaPapers.bib
@@ -1,6 +1,6 @@
 @inproceedings{SousaAECJMRA19,
   title={REM4DSPL: A Requirements Engineering Method for Dynamic Software Product Lines},
-  author={Sousa, Amanda and Uch{\^o}a, Anderson and Fernandes, Eduardo and Bezerra, Carla IM and Monteiro, Jos{\'e} Maria and Andrade, Rossana},
+  author={Sousa, Amanda and Uchôa, Anderson and Fernandes, Eduardo and Bezerra, Carla IM and Monteiro, José Maria and Andrade, Rossana},
   booktitle={Proceedings of the XVIII Brazilian Symposium on Software Quality (SBQS)},
   pages={129--138},
   year={2019},
