--- a/publications/UchoaPapers.bib
+++ b/publications/UchoaPapers.bib
@@ -1,3 +1,16 @@
+@inproceedings{PaixaoAADAJA20,
+  title={Behind the Intents: An In-depth Empirical Study on Software Refactoring in Modern Code Review},
+  author={Paixao, Matheus and Uchôa, Anderson and Bibiano, Ana Carla and Oliveira, Daniel and Garcia, Alessandro and Krinke, Jens and Arnovio, Emilio},
+  booktitle={Proceedings of the 17th International Conference on Mining Software Repositories (MSR)},
+  pages={1 -- 11},
+  year={2020},
+abstract={Code refactorings are of pivotal importance in modern code review. Developers may preserve, revisit, add or undo refactorings through changes' revisions. Their goal is to certify that the driving intent of a code change is properly achieved. Developers' intents behind refactorings may vary from pure structural improvement to facilitating feature additions and bug fixes. However, there is little understanding of the refactoring practices performed by developers during the code review process. It is also unclear whether the developers’ intents influence the selection, composition, and evolution of refactorings during the review of a code change. Through mining 1,780 reviewed code changes from 6 systems pertaining to two large open-source communities, we report the first in-depth empirical study on software refactoring during code review. We inspected and classified the developers’ intents behind each code change into 7 distinct categories. By analyzing data generated during the complete reviewing process, we observe: (i) how refactorings are selected, composed and evolved throughout each code change, and (ii) how developers' intents are related to these decisions. For instance, our analysis shows developers regularly apply non-trivial sequences of refactorings that crosscut multiple code elements (i.e., widely scattered in the program) to support a single feature addition. Moreover, we observed that new developers’ intents commonly emerge during the code review process, influencing how developers select and compose their refactorings to achieve the new and adapted goals. Finally, we provide an enriched dataset that allows researchers to investigate the context and motivations behind refactoring operations during the code review process.},	
+  organization={ACM},
+  note={<font color="red">Accepted for Publication (to appear)</font>}
+}
+
+
+
 @inproceedings{SousaAECJMRA19,
   title={REM4DSPL: A Requirements Engineering Method for Dynamic Software Product Lines},
   author={Sousa, Amanda and Uchôa, Anderson and Fernandes, Eduardo and Bezerra, Carla IM and Monteiro, José Maria and Andrade, Rossana},
